# deepchess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  config.json
app/: CMakeLists.txt  main.cc
client/: package-lock.json  package.json
client/client/src/: App.vue
client/client/src/components/: Chessboard.vue  RecordedGames.vue  WorkerInfo.vue
client/src/: App.vue
client/zmq_server/: main.js  package-lock.json  package.json
src/: CMakeLists.txt  action.h  agent.cc  agent.h  bit_util.cc  bit_util.h  bitboard.h  board.cc  board.h  chess.cc  chess.h  config.cc  config.h  device.h  dirichlet.h  distribution.h  evaluator.cc  evaluator.h  game_state.cc  game_state.h  mcts.cc  mcts.h  mcts_node.cc  mcts_node.h  move.cc  move.h  nn.h  piece.cc  piece.h  serialize.cc  serialize.h  server.cc  server.h  server_context.cc  server_context.h  train.cc  train.h  util.cc  util.h  worker_manager.h
src/nn/: chess_block.cc  chess_block.h  chess_nn.cc  chess_nn.h  nn_util.cc  nn_util.h  se_layer.h
src/piece_moves/: bishop.cc  bishop.h  king.cc  king.h  knight.cc  knight.h  pawn.cc  pawn.h  piece_move.cc  piece_move.h  queen.cc  queen.h  rook.cc  rook.h
tests/: CMakeLists.txt  board_test.cc  game_state_test.cc  mcts_test.cc  nn_test.cc  piece_move_test.cc  piece_test.cc  serialize_test.cc  server_test.cc  test_utils.cc  test_utils.h  train_test.cc  util_test.cc
